modified:   teoria/03_Propiedades y estructura de los Arrays.ipynb

--- a/teoria/03_Propiedades y estructura de los Arrays.ipynb
+++ b/teoria/03_Propiedades y estructura de los Arrays.ipynb
@@ -107,10 +107,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "d2bfa6e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipo de datos: int64\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3])\n",
     "print(\"Tipo de datos:\", arr.dtype)  # int64 (depende del sistema)"
@@ -126,13 +134,229 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "2b5d8856",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tipo de datos: float64\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3.5])\n",
     "print(\"Tipo de datos:\", arr.dtype)  # float64"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e38bd20e",
+   "metadata": {},
+   "source": [
+    "3.2 Conversión de tipos (astype)\n",
+    "Podemos forzar el tipo de un array usando .astype()."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e9b7bf3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original: [1 2 3 4] int64\n",
+      "Convertido a float: [1. 2. 3. 4.] float64\n",
+      "Convertido a string: ['1' '2' '3' '4'] <U21\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([1, 2, 3, 4])\n",
+    "print(\"Original:\", arr, arr.dtype)\n",
+    "\n",
+    "# Convertir a float\n",
+    "arr_float = arr.astype(float)\n",
+    "print(\"Convertido a float:\", arr_float, arr_float.dtype)\n",
+    "\n",
+    "# Convertir a string\n",
+    "arr_str = arr.astype(str)\n",
+    "print(\"Convertido a string:\", arr_str, arr_str.dtype)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2696ad37",
+   "metadata": {},
+   "source": [
+    "3.3 Indexación y slicing\n",
+    "NumPy permite acceder a porciones de un array de forma similar a las listas de Python, pero con mayor poder expresivo.\n",
+    "a) Indexación en 1D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0c8db6c4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([10, 20, 30, 40, 50])\n",
+    "\n",
+    "print(arr[0])    # Primer elemento -> 10\n",
+    "print(arr[-1])   # Último elemento -> 50"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84b0b8ff",
+   "metadata": {},
+   "source": [
+    "b) Slicing en 1D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ce62e4ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[20 30 40]\n",
+      "[10 20 30]\n",
+      "[10 30 50]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(arr[1:4])   # Elementos de índice 1 a 3 -> [20 30 40]\n",
+    "print(arr[:3])    # Primeros 3 -> [10 20 30]\n",
+    "print(arr[::2])   # Cada 2 elementos -> [10 30 50]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "50b0c95f",
+   "metadata": {},
+   "source": [
+    "c) Indexación en 2D\n",
+    "En arrays de dos dimensiones se usa la notación [fila, columna]."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "c04eda7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "6\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "mat = np.array([[1, 2, 3],\n",
+    "                [4, 5, 6],\n",
+    "                [7, 8, 9]])\n",
+    "\n",
+    "print(mat[0, 0])   # Esquina superior izquierda -> 1\n",
+    "print(mat[1, 2])   # Fila 1, columna 2 -> 6\n",
+    "print(mat[-1, -1]) # Último elemento -> 9"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "254b205b",
+   "metadata": {},
+   "source": [
+    "d) Slicing en 2D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "fc88cf92",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [4 5]]\n",
+      "[2 5 8]\n",
+      "[4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mat[:2, :2])   # Submatriz 2x2 de la esquina superior izquierda\n",
+    "# [[1 2]\n",
+    "#  [4 5]]\n",
+    "\n",
+    "print(mat[:, 1])     # Segunda columna -> [2 5 8]\n",
+    "print(mat[1, :])     # Segunda fila -> [4 5 6]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a66690b3",
+   "metadata": {},
+   "source": [
+    "e) Indexación y slicing en ND\n",
+    "En arrays con más dimensiones se agregan más índices separados por comas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2b099a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr3d = np.array([[[1, 2], [3, 4]],\n",
+    "                  [[5, 6], [7, 8]]])\n",
+    "\n",
+    "print(arr3d[0, 1, 1])  # Primer bloque, segunda fila, segunda columna -> 4\n",
+    "print(arr3d[1, :, :])  # Segundo bloque completo -> [[5 6]\n",
+    "                       #                              [7 8]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6a2959c",
+   "metadata": {},
+   "source": [
+    "Resumen\n",
+    "ndim: cantidad de dimensiones.\n",
+    "shape: tupla con filas, columnas y dimensiones adicionales.\n",
+    "size: cantidad total de elementos.\n",
+    "dtype: tipo de datos homogéneo.\n",
+    ".astype(): conversión de tipos en un array.\n",
+    "Indexación y slicing: acceso eficiente a subestructuras en 1D, 2D y ND.\n",
+    "Nota: Dominar estas propiedades facilita inspeccionar los datos y adaptar la estructura de tus arrays a cada problema."
    ]
   }
  ],
