--- a/teoria/05_manipulación de Arrays.ipynb
+++ b/teoria/05_manipulación de Arrays.ipynb
@@ -13,10 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "eaf58c28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array original:\n",
+      " [ 0  1  2  3  4  5  6  7  8  9 10 11]\n",
+      "Array con reshape (3x4):\n",
+      " [[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -46,10 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "74042f28",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3  4  5]\n",
+      " [ 6  7  8  9 10 11]]\n"
+     ]
+    }
+   ],
    "source": [
     "mat = arr.reshape(-1, 6)  # NumPy ajusta la cantidad de filas\n",
     "print(mat)"
@@ -68,10 +90,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a4dbd519",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Concatenación: [1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([1, 2, 3])\n",
     "b = np.array([4, 5, 6])\n",
@@ -90,10 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "030e587a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apilamiento horizontal:\n",
+      " [[1 2 5 6]\n",
+      " [3 4 7 8]]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.array([[1, 2], [3, 4]])\n",
     "b = np.array([[5, 6], [7, 8]])\n",
@@ -116,10 +156,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "038f5d27",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Apilamiento vertical:\n",
+      " [[1 2]\n",
+      " [3 4]\n",
+      " [5 6]\n",
+      " [7 8]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Apilamiento vertical:\\n\", np.vstack([a, b]))"
    ]
@@ -152,10 +204,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0aa9f066",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "División en 2 partes: [array([0, 1, 2, 3, 4]), array([5, 6, 7, 8, 9])]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.arange(10)  # [0 1 2 3 4 5 6 7 8 9]\n",
     "\n",
@@ -176,10 +236,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "462a4310",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz original:\n",
+      " [[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]\n",
+      " [12 13 14 15]]\n",
+      "División vertical:\n",
+      " [array([[0, 1, 2, 3],\n",
+      "       [4, 5, 6, 7]]), array([[ 8,  9, 10, 11],\n",
+      "       [12, 13, 14, 15]])]\n",
+      "División horizontal:\n",
+      " [array([[ 0,  1],\n",
+      "       [ 4,  5],\n",
+      "       [ 8,  9],\n",
+      "       [12, 13]]), array([[ 2,  3],\n",
+      "       [ 6,  7],\n",
+      "       [10, 11],\n",
+      "       [14, 15]])]\n"
+     ]
+    }
+   ],
    "source": [
     "mat = np.arange(16).reshape(4, 4)\n",
     "print(\"Matriz original:\\n\", mat)\n",
@@ -203,10 +287,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "775f5d30",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz original:\n",
+      " [[1 2 3]\n",
+      " [4 5 6]]\n",
+      "Transpuesta:\n",
+      " [[1 4]\n",
+      " [2 5]\n",
+      " [3 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "mat = np.array([[1, 2, 3],\n",
     "                [4, 5, 6]])\n",
@@ -236,10 +334,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4cd652e8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forma original: (2, 3, 4)\n",
+      "Forma permutada: (3, 2, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "arr3d = np.arange(24).reshape(2, 3, 4)  # 2 bloques, 3 filas, 4 columnas\n",
     "print(\"Forma original:\", arr3d.shape)   # (2, 3, 4)\n",
@@ -256,10 +363,10 @@
     "👉 Esto es clave cuando trabajamos con imágenes (alto, ancho, canales) o series temporales.\n",
     "\n",
     "Resumen\n",
-    "reshape: cambia la forma de un array sin alterar sus datos.\n",
-    "concatenate, hstack, vstack: permiten unir arrays.\n",
-    "split, hsplit, vsplit: dividen arrays en sub-arrays.\n",
-    ".T, transpose, swapaxes: reorganizan ejes.\n",
+    "- reshape: cambia la forma de un array sin alterar sus datos.\n",
+    "- concatenate, hstack, vstack: permiten unir arrays.\n",
+    "- split, hsplit, vsplit: dividen arrays en sub-arrays.\n",
+    "- .T, transpose, swapaxes: reorganizan ejes.\n",
     "Nota: Con estas herramientas dominás la manipulación de arrays en NumPy, listo para reorganizar datasets según lo necesites."
    ]
   }
