Integración con otras librerías/teoria

--- a/teoria/08_Álgebra lineal con NumPy.ipynb
+++ b/teoria/08_Álgebra lineal con NumPy.ipynb
@@ -91,10 +91,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2a7b454e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Usando @:\n",
+      " [[19 22]\n",
+      " [43 50]]\n",
+      "Usando matmul:\n",
+      " [[19 22]\n",
+      " [43 50]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Usando @:\\n\", A @ B)\n",
     "print(\"Usando matmul:\\n\", np.matmul(A, B))"
@@ -110,10 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2222a2bc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiplicación elemento a elemento:\n",
+      " [[ 5 12]\n",
+      " [21 32]]\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Multiplicación elemento a elemento:\\n\", A * B)"
    ]
@@ -130,10 +153,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "1ee0aa25",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz identidad 3x3:\n",
+      " [[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "I = np.eye(3)\n",
     "print(\"Matriz identidad 3x3:\\n\", I)"
@@ -155,10 +189,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9276c8eb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Matriz inversa:\n",
+      " [[-2.   1. ]\n",
+      " [ 1.5 -0.5]]\n",
+      "A @ A_inv:\n",
+      " [[1.0000000e+00 0.0000000e+00]\n",
+      " [8.8817842e-16 1.0000000e+00]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([[1, 2],\n",
     "              [3, 4]])\n",
@@ -198,10 +245,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "899adf07",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Determinante: -2.0000000000000004\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([[1, 2],\n",
     "              [3, 4]])\n",
@@ -221,10 +276,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "98a48bfb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autovalores: [2. 3.]\n",
+      "Autovectores:\n",
+      " [[1. 0.]\n",
+      " [0. 1.]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.array([[2, 0],\n",
     "              [0, 3]])\n",
