--- a/ejercicios/ejercicios41-50.ipynb
+++ b/ejercicios/ejercicios41-50.ipynb
@@ -313,14 +313,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "88b960c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 3.]\n",
+      " [4. 5. 0.]\n",
+      " [7. 8. 9.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "mat1=np.array([[1, np.nan, 3], [4, 5, np.nan], [7, 8, 9]])\n",
-    "mat1[np.isnam(mat1)]=0\n",
+    "mat1[np.isnan(mat1)]=0\n",
     "print(mat1)\n"
    ]
   }
