--- a/ejercicios/ejercicios61-70.ipynb
+++ b/ejercicios/ejercicios61-70.ipynb
@@ -143,16 +143,202 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "d9182340",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.55574279 0.1148732  0.89035005 0.55381456]\n",
+      " [0.94013242 0.31550757 0.98562589 0.86092083]\n",
+      " [0.99133887 0.7683321  0.96268659 0.25868721]]\n",
+      " #####  #####  #####  #####  #####  #####  #####  ##### \n",
+      "[[0.94013242 0.31550757 0.98562589 0.86092083]\n",
+      " [0.99133887 0.7683321  0.96268659 0.25868721]\n",
+      " [0.55574279 0.1148732  0.89035005 0.55381456]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np \n",
     "\n",
     "matris=np.random.random((3,4))\n",
     "sorted_matrix_by_column2 = matris[matris[:, 1].argsort()]\n",
-    "print(sorted_matrix_by_column2)"
+    "print(sorted_matrix_by_column2)\n",
+    "\n",
+    "print(\" ##### \"*8)\n",
+    "print(matris)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08e11f37",
+   "metadata": {},
+   "source": [
+    "Ejercicio 66:\n",
+    "\n",
+    "Calcular el determinante de una matriz de 3x3."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "1c73d98d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.04837988 0.93785158 0.91751033]\n",
+      " [0.67639767 0.21541604 0.17411522]\n",
+      " [0.3023623  0.86255698 0.26201076]]\n",
+      "################################################################################\n",
+      "0.35417306134132404\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "matris=np.random.random((3,3))\n",
+    "determiante=np.linalg.det(matris)\n",
+    "print(matris)\n",
+    "print(\"##########\"*8)\n",
+    "print(determiante)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a23f733",
+   "metadata": {},
+   "source": [
+    "Ejercicio 67:\n",
+    "\n",
+    "Calcular la exponenciación elemento por elemento de una matriz 1D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1d2239d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 7.3890561  20.08553692 54.59815003]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "matris=np.array([2,3,4])\n",
+    "exponen=np.exp(matris)\n",
+    "print(exponen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "452e25de",
+   "metadata": {},
+   "source": [
+    "Ejercicio 68:\n",
+    "\n",
+    "Calcular la norma de Frobenius de una matriz 2D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "65a74615",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.536447492919894\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "matrix = np.random.random((3, 4))\n",
+    "frobenius_norm = np.linalg.norm(matrix)\n",
+    "print(frobenius_norm)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c36022de",
+   "metadata": {},
+   "source": [
+    "Ejercicio 69:\n",
+    "\n",
+    "Crea una matriz 2D con valores aleatorios y reemplaza el valor máximo por el mínimo."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "eed562bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.19366412 0.37879985 0.25544103 0.16820004]\n",
+      " [0.5351665  0.01708153 0.52730404 0.01708153]\n",
+      " [0.51120247 0.63609984 0.23097695 0.67465819]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "matris=np.random.random((3,4))\n",
+    "max_value_index = np.unravel_index(np.argmax(matris), matris.shape)\n",
+    "min_value = np.min(matris)\n",
+    "matris[max_value_index] = min_value\n",
+    "print(matris)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4e2e7d9",
+   "metadata": {},
+   "source": [
+    "Ejercicio 70:\n",
+    "\n",
+    "Calcular la multiplicación de matrices de dos matrices 2D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9f2920b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.71201937 0.52203248 0.41084707 0.65331756 0.33136441]\n",
+      " [0.47186991 0.93693819 0.89521347 1.11535685 0.6432528 ]\n",
+      " [0.97846868 0.98515208 0.77787502 0.92065995 0.49410579]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "matrix1 = np.random.random((3, 4))\n",
+    "matrix2 = np.random.random((4, 5))\n",
+    "matrix_multiplication = np.dot(matrix1, matrix2)\n",
+    "print(matrix_multiplication)"
    ]
   }
  ],
