error no se envio reecho

--- a/ejercicios/ejercicio71-80.ipynb
+++ b/ejercicios/ejercicio71-80.ipynb
@@ -11,6 +11,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e1169b0",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "id": "0fd8fa58",
@@ -151,6 +157,124 @@
     "matris=np.random.random((3,3))\n",
     "matris[np.triu_indices(3, 1)] = 0\n",
     "print(matris)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "655aac48",
+   "metadata": {},
+   "source": [
+    "Ejercicio 76:\n",
+    "\n",
+    "Cuente el número de ocurrencias de cada valor único en una matriz 1D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49f9e754",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([2, 2, 1, 3, 3, 3, 4])\n",
+    "unique_values, counts = np.unique(arr, return_counts=True)\n",
+    "print(\"Unique values:\", unique_values)\n",
+    "print(\"Counts:\", counts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b507d85a",
+   "metadata": {},
+   "source": [
+    "Ejercicio 77:\n",
+    "\n",
+    "Calcular el producto acumulativo de elementos a lo largo de un eje dado en una matriz 2D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "998acd67",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "matrix = np.random.random((3, 4))\n",
+    "cumulative_product_axis0 = np.cumprod(matrix, axis=0)\n",
+    "print(cumulative_product_axis0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "337ebcc6",
+   "metadata": {},
+   "source": [
+    "Ejercicio 78:\n",
+    "\n",
+    "Redondea los elementos de una matriz 1D al entero más cercano."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "972e6682",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([1.2, 2.7, 3.5, 4.9])\n",
+    "rounded_arr = np.round(arr)\n",
+    "print(rounded_arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a0e75bd",
+   "metadata": {},
+   "source": [
+    "Ejercicio 79:\n",
+    "\n",
+    "Crea una matriz 1D y añade un nuevo elemento al final."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5abbe231",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([1, 2, 3])\n",
+    "new_element = 4\n",
+    "arr = np.append(arr, new_element)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6874e6b3",
+   "metadata": {},
+   "source": [
+    "Ejercicio 80:\n",
+    "\n",
+    "Calcular la diferencia absoluta elemento por elemento entre dos matrices."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "901f46fb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "arr1 = np.array([3, 7, 1, 10, 4])\n",
+    "arr2 = np.array([2, 5, 8, 1, 7])\n",
+    "absolute_difference = np.abs(arr1 - arr2)\n",
+    "print(absolute_difference)"
    ]
   }
  ],
