--- a/ejercicios/ejercicios81-90.ipynb
+++ b/ejercicios/ejercicios81-90.ipynb
@@ -43,6 +43,204 @@
     "normalized_columns = matrix / np.sum(matrix, axis=0, keepdims=True)\n",
     "print(normalized_columns)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d405e947",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "matrix = np.random.random((3, 4))\n",
+    "normalized_columns = matrix / np.sum(matrix, axis=0, keepdims=True)\n",
+    "print(normalized_columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9076aa08",
+   "metadata": {},
+   "source": [
+    "Ejercicio 83:\n",
+    "\n",
+    "Encuentra los índices de los N valores mínimos superiores en una matriz unidimensional."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "546ded9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([10, 5, 8, 1, 7])\n",
+    "top_indices = np.argsort(arr)[:2]  # Replace 2 with desired top N\n",
+    "print(top_indices)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1194b2c6",
+   "metadata": {},
+   "source": [
+    "Ejercicio 84:\n",
+    "\n",
+    "Convertir los elementos de una matriz unidimensional en cadenas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84a77b2b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([1, 2, 3, 4])\n",
+    "string_arr = arr.astype(str)\n",
+    "print(string_arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd21b85f",
+   "metadata": {},
+   "source": [
+    "Ejercicio 85:\n",
+    "\n",
+    "Calcula el rango percentil de cada elemento en una matriz unidimensional."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aaaf4f0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.stats import percentileofscore\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "# Calculate percentile rank for each element in arr\n",
+    "percentile_rank = np.array([percentileofscore(arr, value) for value in arr])\n",
+    "print(percentile_rank)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "828c569e",
+   "metadata": {},
+   "source": [
+    "Ejercicio 86:\n",
+    "\n",
+    "Crea una matriz unidimensional y baraja sus elementos aleatoriamente."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad040b33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "np.random.shuffle(arr)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bb116a0",
+   "metadata": {},
+   "source": [
+    "Ejercicio 87:\n",
+    "\n",
+    "Comprueba si todos los elementos de una matriz unidimensional son distintos de cero."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47d8805d",
+   "metadata": {},
+   "source": [
+    "import numpy as np\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "all_nonzero = np.all(arr != 0)\n",
+    "print(all_nonzero)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40ea44b0",
+   "metadata": {},
+   "source": [
+    "Ejercicio 88:\n",
+    "\n",
+    "Encuentra los índices del valor máximo en cada fila de una matriz 2D."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15df41e4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "matrix = np.random.random((3, 4))\n",
+    "max_indices_per_row = np.argmax(matrix, axis=1)\n",
+    "print(max_indices_per_row)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0e655cae",
+   "metadata": {},
+   "source": [
+    "Ejercicio 89:\n",
+    "\n",
+    "Crea una matriz 2D y reemplaza todos los valores nan con la media de la matriz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef8c3623",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "matrix = np.array([[1, np.nan, 3], [4, 5, np.nan], [7, 8, 9]])\n",
+    "nan_mean = np.nanmean(matrix)\n",
+    "matrix[np.isnan(matrix)] = nan_mean\n",
+    "print(matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80faeb4b",
+   "metadata": {},
+   "source": [
+    "Ejercicio 90:\n",
+    "\n",
+    "Calcula la media de cada fila en una matriz 2D ignorando los valores nan."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2c61a43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "matrix = np.array([[1, 2, np.nan], [4, np.nan, 6], [7, 8, 9]])\n",
+    "row_means_ignore_nan = np.nanmean(matrix, axis=1)\n",
+    "print(row_means_ignore_nan)"
+   ]
   }
  ],
  "metadata": {
