--- a/ejercicios/ejercicios91-100.ipynb
+++ b/ejercicios/ejercicios91-100.ipynb
@@ -10,10 +10,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "66475cde",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.5254218926112109\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "matrix = np.random.random((3, 3))\n",
@@ -33,10 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "887fa410",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 90. 180. 270.]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "arr_in_radians = np.array([np.pi/2, np.pi, 3*np.pi/2])\n",
@@ -56,10 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6f28f06d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.196152422706632\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "arr1 = np.array([1, 2, 3])\n",
@@ -80,10 +104,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "96a9dbbb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10  0  0  0 50]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "arr = np.array([10, 20, 30, 40, 50])\n",
@@ -105,10 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "95b75425",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9 9 9]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "arr1 = np.array([1, 2, 3])\n",
@@ -129,10 +169,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "7d655ce1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 3  5  9 13 15]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "arr = np.array([2, 5, 8, 12, 15])\n",
@@ -152,10 +200,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c97122fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.5363814  1.         0.         1.        ]\n",
+      " [1.         0.         0.75884561 0.        ]\n",
+      " [0.         0.05949261 1.         0.21148095]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "matrix = np.random.random((3, 4))\n",
@@ -176,10 +234,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "e12d3700",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.25007628 1.0734896  1.26121552 1.45298806]\n",
+      " [0.19988696 0.96659371 1.96104579 2.64596228]\n",
+      " [0.53878771 0.62259114 0.72000482 1.57324646]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "matrix = np.random.random((3, 4))\n",
@@ -199,10 +267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "4a604823",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "arr = np.array([0, 0, 0, 1, 0])\n",
@@ -222,10 +298,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "0bd5445b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[73 42 15 61]\n",
+      " [21 32 75  0]\n",
+      " [75 75 39  2]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "matrix = np.random.randint(0, 100, size=(3, 4))\n",
